working on popular collection

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h3>Influencer products</h3>
       </nav>
     </header>
-    <!-- header end -->
-
-    <!-- main start -->
+    <!-- header end 
+----------------------------------------------------------------------
+         main start -->
     <main>
       <div class="cover-page">
         <div class="cover-page-info">
@@ -48,7 +48,7 @@
       <!-- Popular clollection -->
 
       <section class="popular-collection">
-        <h3>Popular Clollection</h3>
+        <h3 class="section-title">Popular Clollection</h3>
         <div class="product-list">
           <div class="product-card">
             <div class="product-pic">
@@ -56,16 +56,17 @@
             </div>
             <div class="product-info">
               <h3 class="product-name">Flex Tripod</h3>
-              <br />
-              <span class="price-tag">$50.48</span> <br />
+
+              <span class="price-tag">$50.48</span>
               <span class="ratting">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span>5</span>
               </span>
-              <span class="ratting-no">5</span>
+              <!-- <span class="ratting-no">5</span> -->
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -76,7 +77,7 @@
             </div>
             <div class="product-info">
               <h3>Airbuds</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -93,7 +94,7 @@
             </div>
             <div class="product-info">
               <h3>Microphone</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -111,7 +112,7 @@
             </div>
             <div class="product-info">
               <h3>Drone</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -129,7 +130,7 @@
             </div>
             <div class="product-info">
               <h3>Light Setup</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -147,7 +148,7 @@
             </div>
             <div class="product-info">
               <h3>Photoshoot set</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -165,7 +166,7 @@
             </div>
             <div class="product-info">
               <h3>Vlogging Camera</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -183,7 +184,7 @@
             </div>
             <div class="product-info">
               <h3>Green Screen</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -201,7 +202,7 @@
             </div>
             <div class="product-info">
               <h3>Action Camera</h3>
-              <br />
+
               <span class="price-tag">$50.48</span>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -216,6 +217,9 @@
         <a href="">See More <i class="fas fa-arrow-right"></i></a>
       </section>
     </main>
+    <!-- main end 
+----------------------------------------------------------------------
+       footer start -->
     <footer>
       <div class="footer-content">
         <h5>Influencer products</h5>
@@ -237,5 +241,6 @@
         </ul>
       </div>
     </footer>
+    <!-- footer end -->
   </body>
 </html>
