fix first product

--- a/index.html
+++ b/index.html
@@ -58,16 +58,20 @@
               <h3 class="product-name">Flex Tripod</h3>
 
               <span class="price-tag">$50.48</span>
-              <span class="ratting">
+              <span>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star last-star"></i>
-                <span>5</span>
+                <span class="ratting-no">5</span>
               </span>
               <!-- <span class="ratting-no">5</span> -->
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
