added products name and price.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             </div>
             <div class="product-info">
               <h3 class="product-name">Flex Tripod</h3>
-
               <span class="price-tag">$50.48</span>
               <span>
                 <i class="fas fa-star"></i>
@@ -66,7 +65,6 @@
                 <i class="fas fa-star last-star"></i>
                 <span class="ratting-no">5</span>
               </span>
-              <!-- <span class="ratting-no">5</span> -->
               <p>
                 Wordwide shifting <br />
                 available <br />
@@ -80,16 +78,21 @@
               <img src="./images/airpod.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Airbuds</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Airbuds</h3>
+              <span class="price-tag">$100.00</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
           <div class="product-card">
@@ -97,16 +100,21 @@
               <img src="./images/mic.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Microphone</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Microphone</h3>
+              <span class="price-tag">$120.25</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
@@ -115,16 +123,21 @@
               <img src="./images/drone.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Drone</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Drone</h3>
+              <span class="price-tag">$980.25</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
@@ -133,16 +146,21 @@
               <img src="./images/lights.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Light Setup</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Light Setup</h3>
+              <span class="price-tag">$1200.00</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
@@ -151,16 +169,21 @@
               <img src="./images/setup.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Photoshoot set</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Photoshoot set</h3>
+              <span class="price-tag">$820.40</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
@@ -169,16 +192,21 @@
               <img src="./images/camera.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Vlogging Camera</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Vlogging Camera</h3>
+              <span class="price-tag">$1800.80</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
@@ -187,16 +215,21 @@
               <img src="./images/single-light.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Green Screen</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Green Screen</h3>
+              <span class="price-tag">$25.48</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
 
@@ -205,16 +238,21 @@
               <img src="./images/action.png" alt="" />
             </div>
             <div class="product-info">
-              <h3>Action Camera</h3>
-
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
+              <h3 class="product-name">Action Camera</h3>
+              <span class="price-tag">$380.48</span>
+              <span>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star last-star"></i>
+                <span class="ratting-no">5</span>
+              </span>
+              <p>
+                Wordwide shifting <br />
+                available <br />
+                Buyers protection possible!
+              </p>
             </div>
           </div>
         </div>
