--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 ----------------------------------------------------------------------
          main start -->
     <main>
+      <!-- cover page -->
       <div class="cover-page">
         <div class="cover-page-info">
           <h1>
@@ -37,7 +38,7 @@
             architecto maxime non cupiditate atque incidunt dolore qui illo sit.
             Aspernatur.
           </p>
-          <button class="pink-button preebook-button">
+          <button class="pink-color preebook-button">
             <a href="">Preebook now <i class="fas fa-arrow-right"></i></a>
           </button>
         </div>
@@ -45,7 +46,9 @@
           <img src="./images/main-camera.png" alt="picture of a camera" />
         </div>
       </div>
-      <!-- Popular clollection -->
+      <!-- cover page end
+------------------------------------------------------------------------
+      Popular clollection -->
 
       <section class="popular-collection">
         <h3 class="section-title">Popular Clollection</h3>
@@ -256,7 +259,9 @@
             </div>
           </div>
         </div>
-        <a href="">See More <i class="fas fa-arrow-right"></i></a>
+        <a class="pink-color" href=""
+          >See More <i class="fas fa-arrow-right"></i
+        ></a>
       </section>
     </main>
     <!-- main end 
@@ -265,7 +270,7 @@
     <footer>
       <div class="footer-content">
         <h5>Influencer products</h5>
-        <p>Copyright © 2020 influencer products</p>
+        <p>Copyright © 2022 influencer products</p>
         <p>All rights reserved</p>
         <ul class="social-media">
           <li>
@@ -286,3 +291,4 @@
     <!-- footer end -->
   </body>
 </html>
+<!-- The End -->
