--- a/index.html
+++ b/index.html
@@ -263,6 +263,38 @@
           >See More <i class="fas fa-arrow-right"></i
         ></a>
       </section>
+
+      <!-- support area  -->
+
+      <div class="support-area">
+        <h2>Get support</h2>
+        <div class="support">
+          <div class="product-support">
+            <img src="./images/icon_repair.png" alt="" />
+            <br />
+            <span><a href="">Product Support</a></span>
+            <p>
+              Need help with your product? Let us help you find what you need.
+            </p>
+          </div>
+          <div class="product-reg">
+            <img src="./images/icon_how_to_video.png" alt="" />
+            <br />
+            <span><a href="">Product Registration</a></span>
+            <p>
+              Register your product to get the most from support to warranty
+              information.
+            </p>
+          </div>
+          <div class="utility">
+            <img src="./images/icon_eos_utility.jpg" alt="" />
+            <br />
+            <span><a href="">Software & Drivers</a></span>
+            <p>Find software and drivers compatible with your product.</p>
+          </div>
+        </div>
+      </div>
+      <button class="support-button"><a href="">SEE ALL SUPPORT</a></button>
     </main>
     <!-- main end 
 ----------------------------------------------------------------------
