fix support area

--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
       <!-- support area  -->
 
       <div class="support-area">
-        <h2>Get support</h2>
+        <h2>Get Support</h2>
         <div class="support">
           <div class="product-support">
             <img src="./images/icon_repair.png" alt="" />
             <br />
-            <span><a href="">Product Support</a></span>
+            <span class="product-supp"><a href="">Product Support</a></span>
             <p>
               Need help with your product? Let us help you find what you need.
             </p>
@@ -280,7 +280,7 @@
           <div class="product-reg">
             <img src="./images/icon_how_to_video.png" alt="" />
             <br />
-            <span><a href="">Product Registration</a></span>
+            <span class="product-reg"><a href="">Product Registration</a></span>
             <p>
               Register your product to get the most from support to warranty
               information.
@@ -289,7 +289,9 @@
           <div class="utility">
             <img src="./images/icon_eos_utility.jpg" alt="" />
             <br />
-            <span><a href="">Software & Drivers</a></span>
+            <span class="software-support"
+              ><a href="">Software & Drivers</a></span
+            >
             <p>Find software and drivers compatible with your product.</p>
           </div>
         </div>
