added see-more anchore

--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
             </div>
           </div>
         </div>
-        <a class="pink-color" href=""
-          >See More <i class="fas fa-arrow-right"></i
-        ></a>
+        <div class="see-more">
+          <a href="">See More <i class="fas fa-arrow-right"></i></a>
+        </div>
       </section>
 
       <!-- support area  -->
