fixed see more space bug

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Influencer Gear</title>
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
 
     <!-- script -->
     <script
@@ -33,14 +34,13 @@
             Influencer
           </h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-            alias quos placeat perferendis pariatur beatae, quam culpa et itaque
-            architecto maxime non cupiditate atque incidunt dolore qui illo sit.
-            Aspernatur.
+            In this digital world, It is tough to become an influencer without
+            the right gear. To be with your journey we launch our new exciting
+            camera gear.
           </p>
-          <button class="pink-color preebook-button">
+          <span class="pink-color preebook-button">
             <a href="">Preebook now <i class="fas fa-arrow-right"></i></a>
-          </button>
+          </span>
         </div>
         <div class="cover-pic">
           <img src="./images/main-camera.png" alt="picture of a camera" />
@@ -259,9 +259,13 @@
             </div>
           </div>
         </div>
-        <div class="see-more">
-          <a href="">See More <i class="fas fa-arrow-right"></i></a>
-        </div>
+        <!-- <div class="see-more"> -->
+        <!-- <span class="see-more"> -->
+        <a class="see-more" href=""
+          >See More <i class="fas fa-arrow-right"></i
+        ></a>
+        <!-- </span> -->
+        <!-- </div> -->
       </section>
 
       <!-- support area  -->
@@ -303,7 +307,7 @@
     <footer>
       <div class="footer-content">
         <h5>Influencer products</h5>
-        <p>Copyright © 2022 influencer products</p>
+        <p>Copyright &copy; 2022 influencer products</p>
         <p>All rights reserved</p>
         <ul class="social-media">
           <li>
