add div for see more

--- a/index.html
+++ b/index.html
@@ -259,13 +259,9 @@
             </div>
           </div>
         </div>
-        <!-- <div class="see-more"> -->
-        <!-- <span class="see-more"> -->
-        <a class="see-more" href=""
-          >See More <i class="fas fa-arrow-right"></i
-        ></a>
-        <!-- </span> -->
-        <!-- </div> -->
+        <div class="see-more">
+          <a href="">See More <i class="fas fa-arrow-right"></i></a>
+        </div>
       </section>
 
       <!-- support area  -->
