--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             the right gear. To be with your journey we launch our new exciting
             camera gear.
           </p>
-          <span class="pink-color preebook-button">
+          <button class="preebook-button">
             <a href="">Preebook now <i class="fas fa-arrow-right"></i></a>
-          </span>
+          </button>
         </div>
         <div class="cover-pic">
           <img src="./images/main-camera.png" alt="picture of a camera" />
